[package]
name = "update-informer"
version = "0.6.0" # managed by release.sh
authors = ["Mikhail Grachev <work@mgrachev.com>"]
categories = ["command-line-interface"]
documentation = "https://docs.rs/update-informer"
edition = "2021"
homepage = "https://github.com/mgrachev/update-informer"
include = ["/src", "README.md"]
keywords = ["cli", "update", "informer", "notifier", "github"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mgrachev/update-informer"
description = "Update informer for CLI applications"

[features]
default = ["crates", "ureq"]
crates = []
github = []
npm = []
pypi = []
ureq = ["dep:ureq"]
reqwest = ["dep:reqwest"]

[dependencies]
directories = "4.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.reqwest]
version = "0.11"
optional = true
features = ["blocking", "json"]
default-features = false

[dependencies.ureq]
version = "2.4"
optional = true
features = ["json"]
default-features = false

[dev-dependencies]
# Used in the examples of documentation
colored = "2.0.0"
mockito = "0.31.0"
once_cell = "1.10.0"
