[package]
name = "update-informer"
version = "1.2.0" # managed by release.sh
authors = ["Mikhail Grachev <work@mgrachev.com>"]
categories = ["web-programming", "caching"]
documentation = "https://docs.rs/update-informer"
edition = "2021"
homepage = "https://github.com/mgrachev/update-informer"
include = ["/src", "README.md"]
keywords = ["update", "version-check", "notifier", "github", "cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mgrachev/update-informer"
description = "Easily implement update checks for your application"

[package.metadata.docs.rs]
features = ["crates", "github", "npm", "pypi"]

[features]
default = ["crates", "ureq", "rustls-tls"]
crates = []
github = []
npm = []
pypi = []
ureq = ["dep:ureq"]
reqwest = ["dep:reqwest"]
rustls-tls = ["ureq?/tls", "reqwest?/rustls-tls"]
native-tls = ["ureq?/native-tls", "reqwest?/native-tls"]

[dependencies]
etcetera = "0.8.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.reqwest]
version = "0.12"
optional = true
default-features = false
features = ["blocking", "json"]

[dependencies.ureq]
version = "2.4"
optional = true
default-features = false
features = ["gzip", "json"]

[dev-dependencies]
# Used in the examples of documentation
colored = "2.0"
isahc = { version = "1.7", features = ["json"] }
mockito = "0.32"
once_cell = "1.10"

[[example]]
name = "github"
path = "examples/github.rs"
required-features = ["github"]

[[example]]
name = "npm"
path = "examples/npm.rs"
required-features = ["npm"]

[[example]]
name = "pypi"
path = "examples/pypi.rs"
required-features = ["pypi"]
